Membrane proteins yurr (V1)

--- a/MIDTERMPETA-main/zane.html
+++ b/MIDTERMPETA-main/zane.html
@@ -52,7 +52,7 @@ footer a {
                 <li class="nav-item me-1"><a class="nav-link" href="camille.html">Camille</a></li>
                 <li class="nav-item me-1"><a class="nav-link" href="iris.html">Iris Lewy</a></li>
                 <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Andrey Maben</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="zane.html">Zane Ivan</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="zane.html">Membrane Proteins</a></li>
             </ul>
         </div>
     </div>
@@ -62,8 +62,8 @@ footer a {
 <!-- Main Heading-->
 <section class="hero">
   <div class="container">
-    <h1 class="display-4 fw-bold">4HEDS</h1>
-    <p class="lead">Zane Ivan</p>
+    <h1 class="display-4 fw-bold">Membrane Proteins</h1>
+    <p class="lead">4headsbiology</p>
   </div>
 </section>
 
@@ -76,7 +76,6 @@ footer a {
       <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="0" class="active"></button>
       <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="1"></button>
       <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="2"></button>
-      <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="3"></button>
     </div>
 
     <!--Pix-->
@@ -96,11 +95,6 @@ footer a {
           <img src="Pictures/Zane.jpg" class="img-fluid" alt="Zanepic" style="max-height: 100%; object-fit: contain;">
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <img src="Pictures/zane4Resized.jpg" class="img-fluid" alt="ZanepicFixed3" style="max-height: 100%; object-fit: contain;">
-        </div>
-      </div>
     </div>
 
     <!-- Controls -->
@@ -117,8 +111,11 @@ footer a {
 
 <!-- Heading and Subheading -->
 <section class="text-center my-5">
-  <h2 class="h2 fw-bold">Yo! Whats up?</h2>
-  <p class="text-center">Yello'! Zane here. As the title suggests, you get to know me a bit here. While it's only pieces of who I am, I hope it somehow helps lol. Thanks for readin'!</p>
+  <h2 class="h2 fw-bold">Membrane Protein? What is it?</h2>
+  <p class="text-center">Membrane proteins are proteins that are either part of or interact with the biological membranes of cells and organelles. They make up about a third of all proteins in living organisms and are essential for a wide range of cellular processes. They are classified based on their association with the membrane. The 3 classifications are:</p>
+  <p class="text-center">Integral/Intrinsic Membrane Proteins. They are permanently embedded in the membrane. They often spanning the entire lipid bilayer.</p>
+  <p class="text-center">Peripheral/Extrinsic Membrane Proteins. They are temporarily attached to the membrane surface or to integral proteins, and are easily removable.</p>
+  <p class="text-center">Lipid-Anchored Proteins. Covalently attached to lipids within the membrane, which anchors them to the membrane.</p>
 </section>
 
 <!-- Cards Section -->
@@ -191,76 +188,7 @@ footer a {
       </div>
     </div>
   </div>
-</section>
 
-<!--Fave Songs fr-->
-<section class="container my-5 text-center">
-  <div class="row justify-content-center">
-    <div class="col-md-8"></div>
-      <div class="card-custom text-center p-4">
-        <h5 class="fw-bold">Current Favorite Local Song</h5>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2e92Xhid6kHPhmIPOkWfVr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      </div>
-    </div>
-  
-<section class="container my-5 text-center">
-  <div class="row justify-content-center">
-    <div class="col-md-8"></div>
-      <div class="card-custom text-center p-4">
-        <h5 class="fw-bold">Current Favorite International Song</h5>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6FVYwnVrnAEIRnY3bHJb46?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      </div>
-    </div>
-    <!--Github-->
-    <div class="col">
-      <div class="card-custom text-center p-4">
-        <p class="text-muted mt-2">
-          <div class="card-custom text-center p-4">
-            <h5 class="fw-bold">My GitHub Repositories</h5>
-            <a href="https://github.com/ZNIVN-B?tab=repositories" target="_blank"  class="btn btn-dark mt-3">
-              <i class="fa-brands fa-github me-2"></i>Click me to view.
-            </a>
-          </div>
-        </p>
-      </div>
-
-    <!-- Socials -->
-    <div class="col">
-      <div class="card-custom text-center p-4">
-        <h5 class="fw-bold">Socials</h5>
-        <br>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col text-center">
-            <a href="https://www.facebook.com/dawanenonlyzaneivan" target="_blank" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center;">
-              <i class="fa-brands fa-facebook" style="font-size: 48px; color: #1877F2;"></i>Zane Ivan
-            </a>
-          </div>
-          <div class="col text-center">
-            <a href="https://www.instagram.com/zanelngpo/" target="_blank" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center;">
-              <i class="fa-brands fa-instagram" style="font-size: 48px; color:#E1306C"></i>@zanelngpo
-            </a>
-          </div>
-          <div class="col text-center">
-            <a href="http://discordapp.com/users/569029413761581056" target="_blank" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center;">
-              <i class="fa-brands fa-discord" style="font-size: 48px; color:#5865F2"></i>@cleansethyunholy
-            </a>
-          </div>
-          <div class="col text-center">
-            <a href="https://open.spotify.com/user/31zzt5m5qp4joeuto3ce4656od3a?si=74f70d38e9094a3a" target="_blank" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center;">
-              <i class="fa-brands fa-spotify" style="font-size: 48px; color:#1DB954"></i>Zane Ivan
-            </a>
-          </div>
-          <div class="col text-center">
-            <a href="https://github.com/ZNIVN-B" target="_blank" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center;">
-              <i class="fa-brands fa-github" style="font-size: 48px; color:#181717"></i>ZNIVN-B
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>  
-  </div>  
-</section>  
-   </section>
 <!-- Footer -->
 <footer>
     <div class="container">
