Membrane proteins yurrr (V2)

--- a/MIDTERMPETA-main/zane.html
+++ b/MIDTERMPETA-main/zane.html
@@ -125,66 +125,43 @@ footer a {
     <div class="col">
       <div class="card-custom text-center">
         <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">Age? Plus some age-related facts</h5>
-        <p class="text-muted mt-2">
-          <ul class="text-start">
-            <li>Born on August 31 2008</li>
-            <li>Is 16, turning 17</li>
-            <li>Year of the Rat</li>
-            <li>Is a Virgo</li>
-            </ul>
-        </p>
+        <h5 class="fw-bold">Image of membrane proteins</h5>
+        <img src="Pictures/mprotein_depiction.jpg" alt="Mprotein1" style="width: 100%; height: 250px; object-fit: cover;">
       </div>
     </div>
     <div class="col">
       <div class="card-custom text-center">
-        <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">Current Hobbies</h5>
-        <p class="text-muted mt-2">
-          <ul class="text-start">
-            <li>Drumming</li>
-            <li>Gaming</li>
-            <li>Listening to Music</li>
-            <li>A bit of Cycling</li>
-            </ul>
-        </p>
+       <div class="mb-2 fs-1">ⓘ</div>
+        <h5 class="fw-bold">Functions of Membrane Proteins</h5>
+        <img src="Pictures/mprotein_Functions.png" alt="Mproteinfunc1" style="width: 100%; height: 250px; object-fit: cover;">
       </div>
     </div>
     <div class="col">
       <div class="card-custom text-center">
-        <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">Other Random Things Abt Me</h5>
-        <p class="text-muted mt-2">
-          <ul class="text-start">
-            <li>Got in an accident that left a scar on my face.</li>
-            <li>Nearly died along Roxas Blvd.</li>
-            <li>I like sisig.</li>
-            <li>I like my shirts.</li>
-            </ul>
-        </p>
+       <div class="mb-2 fs-1">ⓘ</div>
+        <h5 class="fw-bold">Model of a cell membrane featuring the membrane proteins</h5>
+        <img src="Pictures/mprotein_featured.png" alt="Mproteinfeat" style="width: 100%; height: 250px; object-fit: cover;">
       </div>
     </div>
     <div class="col">
       <div class="card-custom text-center">
-        <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">Birthday Post when I had my 16th.</h5>
-        <img src="Pictures/ZaneBday.jpg" alt="BdayZane" style="width: 100%; height: 250px; object-fit: cover;">
+       <div class="mb-2 fs-1">ⓘ</div>
+        <h5 class="fw-bold">Another image of membrane proteins</h5>
+        <img src="Pictures/mprotein_depiction2.jpg" alt="Mprotein2" style="width: 100%; height: 250px; object-fit: cover;">
       </div>
     </div>
     <div class="col">
       <div class="card-custom text-center">
-        <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">Me Drumming</h5>
-          <img src="Pictures/Zanedrums2.jpg" alt="Drummer" style="width: 100%; height: 250px; object-fit: cover;">
-        </p>
+       <div class="mb-2 fs-1">ⓘ</div>
+        <h5 class="fw-bold">Another image showing the functions of membrane proteins.</h5>
+        <img src="Pictures/mprotein_functions2.jpeg" alt="Mproteinfunc2" style="width: 100%; height: 250px; object-fit: cover;">
       </div>
     </div>
-    <div class="col">
+     <div class="col">
       <div class="card-custom text-center">
-        <div class="mb-2 fs-1">ⓘ</div>
-        <h5 class="fw-bold">One of my Favorite bands right now</h5>
-        <img src="Pictures/ZaneBandLove.jpg" alt="A7X" style="width: 100%; height: 200px; object-fit: cover;">
-        </p>
+       <div class="mb-2 fs-1">ⓘ</div>
+        <h5 class="fw-bold">3D model of membrane proteins.</h5>
+        <img src="Pictures/3dmembraneprotein.jpg" alt="Mproteinfunc2" style="width: 100%; height: 250px; object-fit: cover;">
       </div>
     </div>
   </div>
