--- a/MIDTERMPETA-main/FLOWERS/flower1.html
+++ b/MIDTERMPETA-main/FLOWERS/flower1.html
@@ -309,7 +309,7 @@
 
     <!-- Alert-->
     <div id="alertBox" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(0, 0, 0, 0.8); color: white; padding: 20px; border-radius: 10px; font-size: 18px; z-index: 10000; display: none;">
-      Please wait, while we clean up the 4HEDS...</div>
+      Please wait, while we clean up our DNA</div>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
       const alertBox = document.getElementById("alertBox");
