--- a/MIDTERMPETA-main/newindex.html
+++ b/MIDTERMPETA-main/newindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>4HEDS</title>
+  <title>Cell Membrane</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <style>
@@ -73,17 +73,17 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
   <div class="container-fluid px-4">
-    <a class="navbar-brand" href="index.html">4HEDS</a>
+    <a class="navbar-brand" href="index.html">Biology</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item me-1"><a class="nav-link" href="newindex.html">About Us</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="camille.html">Camille</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="iris.html">Iris Lewy</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Andrey Maben</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="zane.html">Zane Ivan</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="newindex.html">Summary</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="camille.html">Cell Membrane</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="iris.html">Phospholipid Bilayer</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Membrane Proteins</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="zane.html">Cholesterols</a></li>
       </ul>
     </div>
   </div>
@@ -92,14 +92,14 @@
 <!-- Main Heading -->
 <section class="hero">
   <div class="hero-container">
-    <img src="Pictures/Maben.jpg" alt="Maben">
-    <img src="Pictures/Ellie.jpg" alt="Camille">
-    <img src="Pictures/Iris.jpg" alt="Iris">
-    <img src="Pictures/Zane.jpg" alt="Zane">
+    <img src="Pictures/membrane.jpg" alt="Cell Membrane">
+    <img src="Pictures/Bilayer.jpg" alt="Phospholipid Bilayer">
+    <img src="Pictures/Membrane Protein.jpg" alt="Membrane Proteins">
+    <img src="Pictures/Cholesterol.jpg" alt="Cholesterols">
   </div>
   <div class="text-center mt-4">
-    <h1 class="display-4 fw-bold">4HEDS</h1>
-    <p class="lead">About Us</p>
+    <h1 class="display-4 fw-bold">Cell Membrane</h1>
+    <p class="lead">About</p>
   </div>
 </section>
 
@@ -108,12 +108,12 @@
   <div class="row justify-content-center g-4">
     <div class="col-6 col-md-4">
       <div class="bg-light d-flex align-items-center justify-content-center rounded" style="height: 200px; border: 5px solid #f7c948; padding: 5px; overflow: hidden;">
-        <img src="Pictures/goof1.jpg" alt="goof1" style="height: 100%; width: 100%; object-fit: cover; border-radius: 10px; transition: transform 0.3s ease;">
+        <img src="Pictures/GIF1.gif" alt="Cell Membrane 1" style="height: 100%; width: 100%; object-fit: cover; border-radius: 10px; transition: transform 0.3s ease;">
       </div>
     </div>
     <div class="col-6 col-md-4">
       <div class="bg-light d-flex align-items-center justify-content-center rounded" style="height: 200px; border: 5px solid #f7c948; padding: 5px; overflow: hidden;">
-        <img src="Pictures/goof2.jpg" alt="goof2" style="height: 100%; width: 100%; object-fit: cover; border-radius: 10px; transition: transform 0.3s ease;">
+        <img src="Pictures/GIF2.gif" alt="Cell Membrane 2" style="height: 100%; width: 100%; object-fit: cover; border-radius: 10px; transition: transform 0.3s ease;">
       </div>
     </div>
   </div>
@@ -121,8 +121,8 @@
 
 <!-- Heading and Subheading -->
 <section class="text-center my-5">
-  <h2 class="h2 fw-bold">Meet the 4HEDS</h2>
-  <p class="text-muted">Hello! We're 4HEDS! Just a bunch of dunces who like to hang out. </p>
+  <h2 class="h2 fw-bold">Meet the Cell Membrane</h2>
+  <p class="text-muted">The parts, function and the details about the Cell Membrane are: </p>
 </section>
 
 <!-- 4 Quote Cards (2x2 Grid) -->
@@ -133,14 +133,13 @@
     <div class="col-12 col-md-6">
       <div class="card-quote text-center zoom-on-hover card-clickable" onclick="showCard(this)">
         <br><blockquote class="blockquote mb-0">
-          “Believe in the you who believes in yourself”
-          <br>- Kamina<br>
+          <br>
         </blockquote>
         <div class="user-info justify-content-center">
-          <img src="Pictures/babyiris.jpg" alt="User" class="zoom-on-hover">
+          <img src="Pictures/Cell.jpg" alt="Cell Membrane" class="zoom-on-hover">
           <div class="text-start">
-            <div class="title">Iris Lewy D. Arce</div>
-            <div class="description">Hello, I am Iris Arce but you may just refer to me as 'Iris'. I am very timid, but I like drawing and gaming during my free time.</div>
+            <div class="title">Cell Membrane</div>
+            <div class="description">A cell membrane, also known as the plasma membrane, is a thin, flexible barrier that surrounds all cells, separating the cell's interior from the external environment.</div>
           </div>
         </div>
       </div>
@@ -150,14 +149,13 @@
     <div class="col-12 col-md-6">
       <div class="card-quote text-center zoom-on-hover card-clickable" onclick="showCard(this)">
         <blockquote class="blockquote mb-0">
-          “Yeah, I know that you're low. Once you hit the bottom, at least there's nowhere to go but up"
-          <br> - Bring Me The Horizon
+          <br><br>
         </blockquote>
         <div class="user-info justify-content-center">
-          <img src="Pictures/babyzane.jpg" alt="User" class="zoom-on-hover">
+          <img src="Pictures/phospo.jpg" alt="Phospholipid Bilayer" class="zoom-on-hover">
           <div class="text-start">
-            <div class="title">Zane Ivan R. Bagunas</div>
-            <div class="description">Hello! The name's Zane Ivan, can be Zane, can be Ivan, its up to you! I may be a bit quiet if you don't know me but I'll be the noisiest one once we do get close. Catch ya sometime!</div>
+            <div class="title">Phospholipid Bilayer</div>
+            <div class="description">A phospholipid bilayer is a crucial component of cell membranes, consisting of two layers of phospholipid molecules arranged with their hydrophilic (water-attracting) heads facing outward and their hydrophobic (water-repelling) tails facing inward.</div>
           </div>
         </div>
       </div>
@@ -167,14 +165,13 @@
     <div class="col-12 col-md-6">
       <div class="card-quote text-center card-clickable zoom-on-hover" onclick="showCard(this)">
         <blockquote class="blockquote mb-0">
-          “Whatever happens, happens”
-          <br>- enternalnight4
+          <br>
         </blockquote>
         <div class="user-info justify-content-center">
-          <img src="./Pictures/babymaben.jpg" alt="User">
+          <img src="./Pictures/protein.jpg" alt="Membrane Proteins" class="zoom-on-hover">
           <div class="text-start">
-            <div class="title">Andrey Maben B. Palarca</div>
-            <div class="description">Hi I am Andrey Maben B. Palarca but you can call me Andrey or Mabs. I like to eat sleep and play online games and lastly I love spending time with my friends.</div>
+            <div class="title">Membrane Proteins</div>
+            <div class="description">Membrane proteins are proteins that are associated with the membrane of a cell or organelle. They play crucial roles in various cellular processes, including transport, cell signaling, and cell adhesion. These proteins can be embedded within the lipid bilayer or associated with its surface. </div>
           </div>
         </div>
       </div>
@@ -184,14 +181,13 @@
     <div class="col-12 col-md-6">
       <div class="card-quote text-center card-clickable zoom-on-hover" onclick="showCard(this)">
         <blockquote class="blockquote mb-0">
-          “I'm a man of fortune, and I must seek my fortune”
-          <br> - Avery Henry
+          <br>
         </blockquote>
         <div class="user-info justify-content-center">
-          <img src="./Pictures/babyellie.jpg" alt="User">
+          <img src="./Pictures/Choles.jpg" alt="Cholesterol" class="zoom-on-hover">
           <div class="text-start">
-            <div class="title">Camille C. Valladarez</div>
-            <div class="description">Howdy! I am Camille C. Valladarez, but my friends call me Cams/Ellie; anything will do. I usually play games or either stream during my free time so stay tuned!</div>
+            <div class="title">Cholesterol</div>
+            <div class="description">Cholesterol, a sterol lipid, plays a crucial role in maintaining the structure and function of cell membranes, particularly in animal cells. It's an amphiphile, meaning it has both hydrophilic and hydrophobic regions, which allow it to integrate into the phospholipid bilayer of the membrane.</div>
           </div>
         </div>
       </div>
@@ -268,7 +264,7 @@
 <!-- Footer -->
 <footer class="bg-light border-top mt-5 py-3">
   <div class="container text-center">
-    <p class="mb-0">&copy; 2025 4HEDS. All Rights Reserved</p>
+    <p class="mb-0">&copy; 2025 4HEDS' BIOLOGY. All Rights Reserved</p>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
