--- a/MIDTERMPETA-main/iris.html
+++ b/MIDTERMPETA-main/iris.html
@@ -46,17 +46,17 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid px-4">
-        <a class="navbar-brand" href="index.html">4headsbiology</a>
+        <a class="navbar-brand" href="index.html">Biology</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item me-1"><a class="nav-link" href="newindex.html">About Us</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="camille.html">Camille</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="iris.html">Iris Lewy</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Andrey Maben</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="zane.html">Zane Ivan</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="newindex.html">Summary</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="camille.html">Cell Membrane</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="iris.html">Phospholipid Bilayer</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Membrane Proteins</a></li>
+        <li class="nav-item me-1"><a class="nav-link" href="zane.html">Cholesterols</a></li>
             </ul>
         </div>
     </div>
@@ -165,7 +165,6 @@
         <h5 class="fw-bold">3D Model of the Bilayer</h5>
         <img src="Phospholipid Bilayer/Phospholipid3.png" alt="Phospholipid5" style="width: 100%; height: 89%; object-fit: cover;">
       </div>
-    </div>
     </section>
     
  
@@ -173,13 +172,10 @@
 <footer>
     <div class="container">
       <div class="card-custom text-center p-3"></div>
-      <p class="text-center mb-0">&copy; 2025 4HEDS. All Rights Reserved</p>
+      <p class="mb-0">&copy; 2025 4HEDS' BIOLOGY. All Rights Reserved</p>
     </div>
   </footer>
- 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-  </html>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
