--- a/MIDTERMPETA-main/zane.html
+++ b/MIDTERMPETA-main/zane.html
@@ -42,16 +42,16 @@ footer a {
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid px-4">
-        <a class="navbar-brand" href="index.html">4HEDS</a>
+        <a class="navbar-brand" href="index.html">Biology</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item me-1"><a class="nav-link" href="newindex.html">About Us</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="camille.html">Camille</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="iris.html">Iris Lewy</a></li>
-                <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Andrey Maben</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="newindex.html">Summary</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="camille.html">Cell Membrane</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="iris.html">Phospholid Bilayer</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Cholesterols</a></li>
                 <li class="nav-item me-1"><a class="nav-link" href="zane.html">Membrane Proteins</a></li>
             </ul>
         </div>
@@ -169,7 +169,7 @@ footer a {
 <!-- Footer -->
 <footer>
     <div class="container">
-      <p class="text-center mb-0">&copy; 2025 4HEDS. All Rights Reserved</p>
+      <p class="text-center mb-0">&copy; 2025 4HEDS' BIOLOGY. All Rights Reserved</p>
     </div>
   </footer>
   
