--- a/MIDTERMPETA-main/iris.html
+++ b/MIDTERMPETA-main/iris.html
@@ -52,11 +52,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-        <li class="nav-item me-1"><a class="nav-link" href="newindex.html">Summary</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="camille.html">Cell Membrane</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="iris.html">Phospholipid Bilayer</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Membrane Proteins</a></li>
-        <li class="nav-item me-1"><a class="nav-link" href="zane.html">Cholesterols</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="newindex.html">Summary</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="camille.html">Cell Membrane</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="iris.html">Phospholid Bilayer</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="andrey.html">Cholesterols</a></li>
+                <li class="nav-item me-1"><a class="nav-link" href="zane.html">Membrane Proteins</a></li>
             </ul>
         </div>
     </div>
